# unitn-ap-class

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
src/classes/: c01_basic.rs  c01_std.rs  c02_ownership.rs  c03_enums.rs  c04_structs.rs  c04_structshelper.rs  c05_modules.rs  c06_testing.rs  c07_generics.rs  c07_lifetimes.rs  c08_lifetimes.rs  c09_traits.rs  c10_OOP.rs  c11_heap.rs  c12_fp.rs  c14_conc.rs  c99_QA.rs  mod.rs
src/full_files/: c13_maps.rs  mod.rs
